Add documentation, CI/CD, and Maven publishing
- Add comprehensive README.md with quick start examples
- Add EXAMPLES.md with 10 ZMQ pattern examples
- Add PUBLISHING.md with Maven publishing guide
- Add GitHub Actions workflows (ci.yml, release.yml)
- Configure Maven publishing with GitHub Packages support
- Update todo checklist to reflect completed phases 1-4